[gd_scene load_steps=6 format=2]

[ext_resource path="res://DebugFreeTrial-MVdYB.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/trial.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )
mainGameScene = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 1024.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Game Title"
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="New Game" type="MenuButton" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 394.0
margin_top = 16.0
margin_right = 629.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "New Game"
icon_align = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Continue" type="MenuButton" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 401.0
margin_top = 16.0
margin_right = 623.0
margin_bottom = 80.0
focus_mode = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Continue"
icon_align = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Exit" type="MenuButton" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 462.0
margin_top = 16.0
margin_right = 561.0
margin_bottom = 80.0
focus_mode = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Exit"
icon_align = 1

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/New Game" to="." method="_on_New_Game_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Exit" to="." method="_on_Exit_button_up"]
